Revision history for Perl extension Math::Clipper.

1.12  Tue Oct 30 01:09:00 2012

  - Fixed Int128 comparison operators in Clipper library, which could 
    cause wrong orientations.

1.11  Mon Oct 22 14:33:00 2012

  - Reduced 32 bit and 64 bit max integer limits introduced in 4.8.6.

1.10  Tue Oct 16 17:39:00 2012

  - Upgraded the Clipper library to the newest available version 4.8.8.

1.08  Mon May 28 19:16:00 2012

  - Upgraded the Clipper library to the newest available version 4.8.3.

1.07  Tue May 01 12:30:00 2012

  - Upgraded the Clipper library to the newest available version 4.8.0.
  - Upgraded the Clipper library to the newest available version 4.7.5.

1.06  Mon Apr 02 18:36:00 2012

  - new simplify_polygon() and simplify_polygons() functions

  - Renamed is_counter_clockwise() to orientation() (the former is still
    exported for backwards compatibility).

1.05  Sun Mar 11 19:06:00 2012

  - Releasing again, since the 1.04 release got out broken probably.

1.04  Sun Mar 11 19:01:00 2012

  - Upgraded the Clipper library to the newest available version 4.7.3.

1.03  Sat Jan 28 16:39:43 2012

  - Added a sub CLONE_SKIP { 1 } to make the module thread-safe in its
    basic form

1.02  Tue Oct 11 16:36:00 2011

  - Upgraded the Clipper library to the newest available version 4.5.5.
    use_full_coordinate_range is always enabled by default, so we now 
    provide this method for legacy purposes but it's actually a no-op.
  
  - Removed warning from integerize_coordinate_sets().

  - Added Test::Deep to prerequisites.

1.01  Mon Oct 03 09:15:00 2011

  - Upgraded the Clipper library to the newest available version 4.4.4.
  
  - New jointype and miterlimit arguments supported for OffsetPolygons

1.00  Mon Sep 19 08:48:00 2011
  * WARNING * This release contains incompatible changes!

  - Upgraded the Clipper library to the newest available version 4.3.0.

  - Clipper 4.3.0 has various interface changes, see the documentation